navbar overflow fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,9 @@
 @import "bootstrap";
 
 .page-wrapper {
-    display: block;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .min-padding {
@@ -32,20 +32,25 @@ body {
 //================Landing View=============
 .landing-page {
     height: 100vh;
-    margin-bottom: 20px;
+    margin: 0;
     padding: 0;
-    background-color: white;
-    // background: url('https://puu.sh/yJ29j/f6901b4c28.gif') no-repeat center center fixed;
-    // background-size: cover;
-    // opacity: 0.5;
+    margin-bottom: 20px;
+    // background-color: white;
+    background: url('https://puu.sh/yJ29j/f6901b4c28.gif') no-repeat center center white;
+    background-size: cover;
+    opacity: 1;
 }
  
 #landing-page {
-    background-color: #1a75ff;
-    height: 100%;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
     width: 100%;
-    opacity: 0.8;
+    background-color: #66a1ff;
+    opacity: 0.9;
+
 }
+
 //================Landing View==============
 //================Console View=============
 .console {
@@ -114,14 +119,23 @@ body {
 // }
 
 //===============navbar animation==============
+.navbar-custom, #landing-page {
+    width: 100%;
+    top: 0;
+    position: absolute;
+}
 
 .navbar-custom {
-    background: 0 0;
     border: 0;
+    z-index: 10;
+}
+
+.navbar-collapse {
+    padding: 0;
 }
 
 .nav > li > a:hover{
-    background-color: #70a6ff !important;
+    background-color: #66a1ff !important;
 }
 
 .nav a {
@@ -136,9 +150,9 @@ body {
 //     z-index: 1000;
 // }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 769px) {
     .navbar-custom {
-        background-color: #1a75ff;
+        background: 0 0;
     }
 }
 
